[package]
name = "mpris-control"
version = "0.4.3"
authors = ["BlackDex"]
edition = "2021"
rust-version = "1.66.1"
resolver = "2"

repository = "https://github.com/BlackDex/mpris-control"
readme = "README.md"
license = "GPL-3.0-only"
publish = false

[dependencies]
mpris = "2.0.0"
pico-args = "0.5.0"

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
rpath = false
strip = true
